--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-time-machine
 title: Welcome to the homepage of Roni!
-description: Feel free to bookmark this to keep an eye on my project updates
+description: Feel free to bookmark this to be updated on my projects.
